--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -1,24 +1,15 @@
 {
   "compilerOptions": {
     "target": "ES2020",
-    "lib": [
-      "ES2020",
-      "DOM",
-      "DOM.Iterable"
-    ],
-    "jsx": "react-jsx",
+    "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "moduleResolution": "Bundler",
+    "jsx": "react-jsx",
     "strict": true,
     "noEmit": true,
-    "skipLibCheck": true,
-    "types": [
-      "vite/client"
-    ]
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "types": ["vite/client"]
   },
-  "include": [
-    "src",
-    "src/vite-env.d.ts",
-    "vite.config.ts"
-  ]
+  "include": ["src"]
 }
