chore/limpieza arbol (#1)
* render: blueprint (api + nueva DB interna) + python-3.11.9

* refactor(front): mover frontend a src/ (plantilla academia), Vite env y tipos OK

* build(front): add root tsconfig for tsc -b and ensure Vite env/types

* build: usar único index.html de Vite, punto de montaje #root y ignorar dist

* chore(front): limpiar web/ y src/front/, API sin localhost hardcodeado, .gitignore y .env.local OK

* fix(front): restaurar api.ts con detección de env y helpers

* chore: CORS estable y orden en el árbol del proyecto

* chore: ignorar y eliminar *.bak del repo

--- a/.gitignore
+++ b/.gitignore
@@ -80,3 +80,13 @@ database.database
 database.db
 diagram.png
 __pycache__/
+dist/
+.env.local
+tsconfig.tsbuildinfo
+
+# Local dev env files
+.env.local
+src/front/.env.local
+
+# Backups
+*.bak
